REARRANGE DIVS TO ALIGN FLEX BOXES CORRECTLY

--- a/style.css
+++ b/style.css
@@ -2,32 +2,68 @@
     background-color: #1f2937;
     display: flex;
     flex-direction: column;
+    padding-bottom: 100px;
     }
 
     h2 { 
         color: #f9faf8;
-        font-size: 24px;
+        font-size: 24px; 
+        display: flex;    
+    }
+
+     ul {
+      color: #e5e7eb; 
+      font-size: 18px;
+      list-style: none; 
+      display: flex;
+      gap: 20px;
+    }
+    
+    .header {
         display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
     }
 
     h1 {
         color: #f9faf8;
         font-size: 48px;
         font-weight: bolder;
-    }
-
-    li {
-      color: #e5e7eb; 
-      font-size: 18px;
-      list-style: none; 
+        display: flex;    
     }
 
     p {
         color: #e5e7eb;
         font-size: 18px;
+        display: flex;       
     }
     
     button {
         background-color: #3882f6;
         color: #e5e7eb;
+        display: flex; 
     }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        flex-grow: 0;
+    }
+
+    .contents {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+ 
+    img {
+        display: flex;
+    }
+
+    footer {
+        font-size: 18px;
+        color: #f9faf8;
+        display: flex;
+    }
+
